5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1573_1332.log
== TEST (2019-03-11 15:29:24) 
-- CODE:
aresta =5
area =3/2(3)**0,5.5**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3)**0,5.5**2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:56) 
-- CODE:
aresta =5
area =3/2.(3)**0,5.5**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2.(3)**0,5.5**2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:58) 
-- CODE:
aresta =5
area =3/2.(3)**0,5.5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.168627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2.(3)**0,5.5**2
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:29) 
-- CODE:
aresta =5
area =3/2.(3.5**2)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2.(3.5**2)**0,5
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:39) 
-- CODE:
aresta =5
area =3/2.(3.5**2)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2.(3.5**2)**0,5
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:20) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:10) 
-- CODE:
aresta =5
area =(3*(3*5**2)**0,5)/2

 
print(round(, , 4)
-- ERROR:
File "XXXX", line 5
    print(round(, , 4)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:42) 
-- CODE:
aresta =5
area =(3*(3*5**2)**0,5)/2

 
print(round(,(3*(3*5**2)**0,5)/2 , 4)
-- ERROR:
File "XXXX", line 5
    print(round(,(3*(3*5**2)**0,5)/2 , 4)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:54) 
-- CODE:
aresta =5
area =(3*(3*5**2)**0,5)/2

 
print(round(,(3*(3*5**2)**0,5)/2,4)
-- ERROR:
File "XXXX", line 5
    print(round(,(3*(3*5**2)**0,5)/2,4)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:08) 
-- CODE:
aresta =5
area =(3*(3*5**2)**0,5)/2

 
print(round(,(3*(3*5**2)**0,5)/2,4))

-- ERROR:
File "XXXX", line 5
    print(round(,(3*(3*5**2)**0,5)/2,4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:24) 
-- CODE:
aresta =5
area =(3*(3*5**2)**0,5)/2

 
print(round((3*(3*5**2)**0,5)/2,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3*(3*5**2)**0,5)/2
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:43) 
-- CODE:
aresta =5
area =((aresta**2)*3**0,5)*3/2

 
print(round((aresta**2)*3**0,5)*3/2,4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((aresta**2)*3**0,5)*3/2
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:34) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0,5)*3/2

 
print(round((aresta**2)*(3)**0,5)*3/2,4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((aresta**2)*(3)**0,5)*3/2
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:15) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

 
print(round((aresta**2)*(3)**0.5)*3/2,4)

-- OUTPUT:
64.5 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:18) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

 
print(round((aresta**2)*(3)**0.5)*3/2,4)

-- EXECUTION TIME:
0.144118
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.5 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:25) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

 
print(round((aresta**2)*(3)**0.5)*3/2,4)

-- EXECUTION TIME:
0.164642
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.5 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:28) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

 
print(round((aresta**2)*(3)**0.5)*3/2,4)

-- OUTPUT:
64.5 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:55) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

 
print(round(area,4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:58) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

 
print(round(area,4))

-- EXECUTION TIME:
0.187741
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
